--- a/css/home.css
+++ b/css/home.css
@@ -114,120 +114,28 @@ nav .container {
 /* ==========================================================================
 BANNER
 ========================================================================== */
-
-.welcome {
-  background: #fff;
-  height: 70vh;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
+#banner {
+  height: 700px;
+  background: linear-gradient(to right, #e2e7ef 0%, #ffffff 100%);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
 }
 
-.welcome h2 {
-  font-weight: 500;
-  color: #1f2429;
-  margin-bottom: 20px;
-  margin: 0 auto;
+#banner .text {
+  width: 80%;
+  max-width: 800px;
+  margin: 100px auto;
   text-align: center;
-}
-
-
-.banner-img {
-  z-index: 99;
 }
 
 .banner-img img {
   width: 80%;
-  max-width: 650px;
-}
-
-@media (max-width: 575.98px) {
-  .welcome h1 {
-    font-size: 5.90rem;
-  }
-}
-
-.welcome .inner-wrapper {
-  position: relative;
-  max-width: 700px;
-  margin: 0 auto 1.5% auto;
-  z-index: 3;
-}
-
-.welcome .inner-wrapper > p {
-  margin-bottom: 20px;
-  color: #5f738e;
-  transition-delay: 150ms;
-}
-
-.welcome .inner-wrapper > .action-links {
-  transition-delay: 300ms;
-}
-
-.welcome .product-by {
-  position: relative;
-  z-index: 3;
-  margin-bottom: 30px;
-}
-
-.welcome .product-by a:hover {
-  text-decoration: none;
-}
-
-.welcome .product-by p {
-  font-size: 10px;
-  color: #b1b4bd;
-  text-transform: uppercase;
-  margin: 0;
-}
-
-.welcome:before, .welcome:after {
-  content: '';
-  position: absolute;
-  width: 50vw;
-  height: 80vh;
-  -webkit-transform: rotate(-25deg);
-          transform: rotate(-25deg);
-  z-index: 1;
-}
-
-.welcome:before {
-  left: -15vw;
-  top: -30%;
-  background: #fff;
-  background: linear-gradient(to right, #e2e7ef 0%, #ffffff 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#e2e7ef', endColorstr='#ffffff', GradientType=1);
-}
-
-@media (max-width: 630px) {
-  .welcome:before {
-    left: -35%;
-  }
-}
-
-@media (max-width: 767.98px) {
-  .welcome h2 {
-    max-width: 80%;
-    margin: 50px auto;
-  }
-}
-
-.welcome:after {
-  right: -5vw;
-  top: -15%;
-  background: #ffffff;
-  background: linear-gradient(to right, #ffffff 0%, #e2e7ef 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e2e7ef', GradientType=1);
-}
-
-@media (max-width: 991.98px) {
-  .welcome:before {
-    left: -30%;
-  }
-
-  .welcome:after {
-    right: -17%;
-  }
+  max-height: 80%;
+  max-width: 800px;
+  display: block;
+  margin: 0 auto;
 }
 
 /* ==========================================================================
@@ -485,6 +393,10 @@ B O A R D
   margin-bottom: 50px;
 }
 
+.officers .col-lg-4 {
+  float: left;
+}
+
 .officers .officer-item {
   max-width: 18rem;
 }
@@ -548,7 +460,6 @@ B O A R D
   margin-bottom: 0px;
   font-weight: 700;
 }
-
 
 #connect .table {
   margin-top: 30px;
@@ -629,11 +540,6 @@ B O A R D
   color: #abacae;
   padding-bottom: 15px;
 }
-
-/* #connect .table:hover {
-  background: #f8f9fb;
-  box-shadow: 0px 2px 18px 0px rgba(198, 198, 198, 0.3);
-} */
 
 
 @media screen and (min-width: 1200px){
