--- a/css/projects.css
+++ b/css/projects.css
@@ -12,7 +12,7 @@ body {
   background: #fff;
   font-size: 14px;
   font-weight: 400;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'roboto' !important;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -267,7 +267,6 @@ PROJECTS
 
 .social-icon a {
   color: #666;
-  background: #fff;
   width: 32px;
   height: 32px;
   line-height: 34px;
@@ -506,7 +505,6 @@ Sponsors
   border: 1px solid #FFF;
   border-radius: 100%;
   font-size: 20px;
-  background-color: transparent;
   margin: 15px 6px 12px 4px;
   transition: all 0.3s ease-in-out 0s;
   -moz-transition: all 0.3s ease-in-out 0s;
