--- a/css/home.css
+++ b/css/home.css
@@ -11,7 +11,8 @@ body {
   margin: 0;
   background: #fff;
   font-weight: 400;
-  font-family: 'roboto' !important;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  /*font-family: 'Roboto', sans-serif;*/
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
